# @file
# @author mkkulagowski
# @brief  CMake for SnAIk project

cmake_minimum_required(VERSION 3.9.3)

PROJECT(SnAIk)
SET(BOOST_INCLUDEDIR E:/Apps/boost_1_65_1)
SET(BOOST_LIBRARYDIR E:/Apps/boost_1_65_1/lib_x54new2/lib)
SET(Boost_ADDITIONAL_VERSIONS 1.65.1)
SET(BOOST_PYTHON_STATIC_LIB ON)
SET(Boost_USE_MULTITHREADED ON)
SET(BOOST_PYTHON_STATIC_LIB ON)
SET(Boost_USE_STATIC_RUNTIME ON)
SET(BOOST_DEBUG ON)
SET(Boost_PYTHON_VERSION_TAG "3")
FIND_PACKAGE(PythonInterp)
FIND_PACKAGE(PythonLibs)
FIND_PACKAGE(Boost COMPONENTS python)

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS} ${PYTHON_INCLUDE_DIRS})
LINK_LIBRARIES(${Boost_LIBRARIES} ${PYTHON_LIBRARIES}) # Deprecated but so convenient!

SET(CMAKE_GENERATOR_PLATFORM "Visual Studio 15 2017 Win64")

IF(NOT DEFINED BUILD_PLATFORM OR BUILD_PLATFORM STREQUAL "")
	SET(BUILD_PLATFORM "x64")
ENDIF(NOT DEFINED BUILD_PLATFORM OR BUILD_PLATFORM STREQUAL "")
SET(CMAKE_CONFIGURATION_TYPES Release;Debug)
SET(CompilerFlags
        CMAKE_CXX_FLAGS
        CMAKE_CXX_FLAGS_DEBUG
        CMAKE_CXX_FLAGS_RELEASE
        CMAKE_C_FLAGS
        CMAKE_C_FLAGS_DEBUG
        CMAKE_C_FLAGS_RELEASE
        )
FOREACH(CompilerFlag ${CompilerFlags})
  STRING(REPLACE "/MD" "/MT" ${CompilerFlag} "${${CompilerFlag}}")
ENDFOREACH()

SET(SNAIK_ROOT_DIR ${CMAKE_SOURCE_DIR})
SET(SNAIK_OUTPUT_DIRECTORY ${SNAIK_ROOT_DIR}/Bin/${BUILD_PLATFORM})
SET(SNAIK_PROJECT_DIR ${SNAIK_ROOT_DIR}/source/SnAIk)
SET(SNAIKDEPS_ROOT_DIR ${SNAIK_ROOT_DIR}/external)
# glm is a header-only library
SET(SNAIKDEPS_GLM_INCLUDE_DIRECTORY ${SNAIKDEPS_ROOT_DIR}/glm-0.9.7.1)

SET(SNAIKDEPS_GTEST_DIRECTORY ${SNAIKDEPS_ROOT_DIR}/gtest)
SET(SNAIKDEPS_GTEST_INCLUDE_DIRECTORY ${SNAIKDEPS_ROOT_DIR}/gtest/include)
SET(SNAIKDEPS_GTEST_LIB_DIRECTORY ${SNAIK_OUTPUT_DIRECTORY})

SET(SNAIKDEPS_GLEW_INCLUDE_DIRECTORY ${SNAIKDEPS_ROOT_DIR}/glew-1.13.0/include)
SET(SNAIKDEPS_GLEW_LIB_DIRECTORY ${SNAIKDEPS_ROOT_DIR}/glew-1.13.0/lib/Release/${BUILD_PLATFORM})

SET(SNAIKDEPS_BULLET_INCLUDE_DIRECTORY ${SNAIKDEPS_ROOT_DIR}/bullet3-2.83.7/src)
SET(SNAIKDEPS_BULLET_LIB_DIRECTORY ${SNAIKDEPS_ROOT_DIR}/bullet3-2.83.7/bin)

SET(SNAIKDEPS_GLFW_INCLUDE_DIRECTORY ${SNAIKDEPS_ROOT_DIR}/glfw/include)
SET(SNAIKDEPS_GLFW_LIB_DIRECTORY ${SNAIK_OUTPUT_DIRECTORY})

SET(SNAIKDEPS_INCLUDE ${SNAIKDEPS_GLM_INCLUDE_DIRECTORY} ${SNAIKDEPS_GLEW_INCLUDE_DIRECTORY} ${SNAIKDEPS_BULLET_INCLUDE_DIRECTORY} ${SNAIKDEPS_GLFW_INCLUDE_DIRECTORY})
SET(SNAIKDEPS_LIB_DIRS ${SNAIKDEPS_GLEW_LIB_DIRECTORY} ${SNAIKDEPS_BULLET_LIB_DIRECTORY} ${SNAIKDEPS_GLFW_LIB_DIRECTORY})
SET(SNAIKDEPS_LIB glu32 opengl32 glfw glew32 glew32s BulletCollision_vs2010_x64_${CMAKE_CFG_INTDIR} BulletDynamics_vs2010_x64_${CMAKE_CFG_INTDIR} BulletSoftBody_vs2010_x64_${CMAKE_CFG_INTDIR} LinearMath_vs2010_x64_${CMAKE_CFG_INTDIR})
#SET(SNAIKDEPS_LIB "glu32.lib;opengl32.lib;glfw.lib;glew32.lib;glew32s.lib;BulletCollision_vs2010_x64_${CMAKE_CFG_INTDIR}.lib;BulletDynamics_vs2010_x64_${CMAKE_CFG_INTDIR}.lib;BulletSoftBody_vs2010_x64_${CMAKE_CFG_INTDIR}.lib;LinearMath_vs2010_x64_${CMAKE_CFG_INTDIR}.lib")

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${SNAIK_OUTPUT_DIRECTORY})
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${SNAIK_OUTPUT_DIRECTORY})

ADD_SUBDIRECTORY(source)
ADD_SUBDIRECTORY(external)