# @file
# @author mkkulagowski
# @brief  CMake for SnAIk project

FILE(GLOB SNAIK_SOURCES                  *.cpp)
FILE(GLOB SNAIK_HEADERS                  *.hpp)
FILE(GLOB SNAIK_OBJECTS_SOURCES          Objects/*.cpp)
FILE(GLOB SNAIK_OBJECTS_HEADERS          Objects/*.hpp)
FILE(GLOB SNAIK_PRIMITIVES_SOURCES       Objects/Primitives/*.cpp)
FILE(GLOB SNAIK_PRIMITIVES_HEADERS       Objects/Primitives/*.hpp)

LIST(REMOVE_ITEM SNAIK_HEADERS "${CMAKE_CURRENT_LIST_DIR}/PythonAPI.hpp")
LIST(REMOVE_ITEM SNAIK_SOURCES "${CMAKE_CURRENT_LIST_DIR}/pythonsth.cpp")
#LIST(REMOVE_ITEM SNAIK_SOURCES "${CMAKE_CURRENT_LIST_DIR}/PythonAPI.cpp")

SOURCE_GROUP("Source Files" FILES ${SNAIK_SOURCES} ${SNAIK_HEADERS})
SOURCE_GROUP("Source Files\\Objects" FILES ${SNAIK_OBJECTS_SOURCES} ${SNAIK_OBJECTS_HEADERS})
SOURCE_GROUP("Source Files\\Objects\\Primitives" FILES ${SNAIK_PRIMITIVES_SOURCES} ${SNAIK_PRIMITIVES_HEADERS})

INCLUDE_DIRECTORIES(${SNAIKDEPS_INCLUDE})
LINK_DIRECTORIES(${SNAIKDEPS_LIB_DIRS})
LINK_LIBRARIES(${SNAIKDEPS_LIB})
ADD_DEFINITIONS(-DFSHADER_PATH="${CMAKE_CURRENT_LIST_DIR}/Shaders/Main.fragmentshader" -DVSHADER_PATH="${CMAKE_CURRENT_LIST_DIR}/Shaders/Main.vertexshader")
#ADD_EXECUTABLE(SnAIk ${SNAIK_SOURCES} ${SNAIK_HEADERS}
#            ${SNAIK_OBJECTS_SOURCES} ${SNAIK_OBJECTS_HEADERS}
#            ${SNAIK_PRIMITIVES_SOURCES} ${SNAIK_PRIMITIVES_HEADERS}
#            )


PYTHON_ADD_MODULE(SnAIk ${SNAIK_SOURCES} ${SNAIK_HEADERS}
            ${SNAIK_OBJECTS_SOURCES} ${SNAIK_OBJECTS_HEADERS}
            ${SNAIK_PRIMITIVES_SOURCES} ${SNAIK_PRIMITIVES_HEADERS})
#PYTHON_ADD_MODULE(hello pythonsth.cpp)
#FILE(COPY hello.py DESTINATION ${SNAIK_OUTPUT_DIRECTORY})
ADD_DEPENDENCIES(SnAIk glfw)