# @file
# @author mkkulagowski
# @brief  CMake for SnAIk project

FILE(GLOB SNAIKTEST_SOURCES                  *.cpp)
FILE(GLOB SNAIKTEST_HEADERS                  *.hpp)

INCLUDE_DIRECTORIES(${SNAIK_PROJECT_DIR} ${SNAIKDEPS_INCLUDE} ${SNAIKDEPS_GTEST_INCLUDE_DIRECTORY})
LINK_DIRECTORIES(${SNAIKDEPS_LIB_DIRS} ${SNAIKDEPS_GTEST_LIB_DIRECTORY})
LINK_LIBRARIES(${SNAIKDEPS_LIB} gtest)

ADD_EXECUTABLE(SnAIkTest ${SNAIKTEST_SOURCES} ${SNAIKTEST_HEADERS})
ADD_DEPENDENCIES(SnAIkTest gtest)